# FLASKetude

./: .gitignore  README.rst  app.py  docker-compose.yml  environment.yml  pyproject.toml
database/: db.py  models.py
resources/: auth.py  errors.py  movie.py  reset_password.py  routes.py
services/: mail_service.py
tests/: base.py  test_create_movie.py  test_flasketude.py  test_get_movies.py  test_login.py  test_signup.py
