[tool.poetry]
name = "FLASKetude"
version = "0.1.0"
description = ""
authors = ["Paolo Cozzi <bunop@libero.it>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
ipython = "^7.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
